Add get method, thanks so much for Sinh.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
       <div style="width: 90%; margin-left: auto; margin-right: auto;">
-          <h1 style="text-align:center;">Python using Datastore, Thanks Sinh!</h1>
+          <h1 style="text-align:center;">Python using Datastore, Thanks so muchhhhhh Sinh!</h1>
           <br />
           <div style="width: 45%; float: right; background-color: #e5eecc; padding-left: 15px; padding-right: 15px; min-height: 246px; border-radius:5%; ">
 
