Edit and Delete

--- a/index.html
+++ b/index.html
@@ -50,9 +50,16 @@
                       </div>
                       <div style="width: 21%; float: left; border: 0px solid black; height: 18px; overflow: hidden; ">
                           {{ greeting.content }}
+                          
                       </div>
                       <div style="width: 16%; float: left; border: 0px solid black; height: 18px; overflow: hidden; ">
-                          Edit/Delete
+                         
+                          <form method="post" action="/">
+                              <button type="submit" value="{{ greeting.name }}" name="editwhat" style="width:50%; float:right">Edit</button>
+                          <!--</form>
+                          <form method="post" action="/">-->
+                              <button type="submit" value="{{ greeting.name }}" name="deletewhat" style="width:50%; float:right">Delete</button>
+                          </form>
                       </div>
                   </blockquote>
                   {% endfor %}
@@ -64,11 +71,21 @@
           </div>
           <div style="width: 45%; background-color: #e5eecc; padding-left: 15px; padding-right: 15px; border-radius: 5%;">
               <form action="/sign?guestbook_name={{ guestbook_name }}" method="post">
-                  <div>Name<br /><textarea name="name" rows="1" cols="40"></textarea></div>
-                  <div>Family Name<br /><textarea name="fname" rows="1" cols="40"></textarea></div>
-                  <div>Email Address<br /><textarea name="email" rows="1" cols="40"></textarea></div>
-                  <div>Note<br /><textarea name="content" rows="3" cols="40"></textarea></div>
+                  <div>Name<br /><textarea name="name" rows="1" cols="40">{{ aaa_name }}</textarea></div>
+                  <div>Family Name<br /><textarea value="{{ aaa_fname }}" name="fname" rows="1" cols="40"></textarea></div>
+                  <div>Email Address<br /><textarea value="{{ aaa_email }}" name="email" rows="1" cols="40"></textarea></div>
+                  <div>Note<br /><textarea value="{{ aaa_note }}" name="content" rows="3" cols="40"></textarea></div>
                   <div style="margin-left: auto; margin-right: auto; width:100%;"><input type="submit" value="Submit"></div>
+
+              </form>
+          </div>
+          <div style="width: 45%; background-color: #e5eecc; padding-left: 15px; padding-right: 15px; border-radius: 5%;">
+              <form action="/edit?guestbook_name={{ guestbook_name }}" method="post">
+                  <div>Name<br /><textarea name="name" rows="1" cols="40">{{ aaa_name }}</textarea></div>
+                  <div>Family Name<br /><textarea value="{{ aaa_fname }}" name="fname" rows="1" cols="40">{{ aaa_fname }}</textarea></div>
+                  <div>Email Address<br /><textarea value="{{ aaa_email }}" name="email" rows="1" cols="40">{{ aaa_email }}</textarea></div>
+                  <div>Note<br /><textarea value="{{ aaa_note }}" name="content" rows="3" cols="40">{{ aaa_note }}</textarea></div>
+                  <div style="margin-left: auto; margin-right: auto; width:100%;"><button type="submit" value="{{ aaa_name }}" name="edwhat">Save</button></div>
               </form>
           </div>
           <hr>
